@@ -1,4 +1,6 @@
 ﻿---
+   Korean translation added thanks to neurostar
+
 2010-09-23 - Version 1.10.1
    Initial code sync between forum-mods & google project by Zerqent
    Version number changed to match launcherVER.xbmc-dharmaVER.launcherREV
